(fix) Change width of main to avoid small horizontal scroll

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -122,7 +122,7 @@ body {
 
 main {
 	min-height: 100vh;
-	width: 100vw;
+	width: 100%;
 
 	backdrop-filter: blur(10px);
 
